exports[`NavigationStack should display a not-found view if the route is not found 1`] = `
<View
  onLayout={[Function bound _onLayout]}
  style={
    Array [
      Object {
        "flex": 1
      },
      undefined
    ]
  }>
  <View
    style={
      Object {
        "flex": 1,
        "flexDirection": "column-reverse"
      }
    }>
    <View
      style={
        Object {
          "flex": 1
        }
      }>
      <View
        onMoveShouldSetResponder={[Function onMoveShouldSetResponder]}
        onMoveShouldSetResponderCapture={[Function onMoveShouldSetResponderCapture]}
        onResponderEnd={[Function onResponderEnd]}
        onResponderGrant={[Function onResponderGrant]}
        onResponderMove={[Function onResponderMove]}
        onResponderReject={[Function onResponderReject]}
        onResponderRelease={[Function onResponderRelease]}
        onResponderStart={[Function onResponderStart]}
        onResponderTerminate={[Function onResponderTerminate]}
        onResponderTerminationRequest={[Function onResponderTerminationRequest]}
        onStartShouldSetResponder={[Function onStartShouldSetResponder]}
        onStartShouldSetResponderCapture={[Function onStartShouldSetResponderCapture]}
        pointerEvents="auto"
        style={
          Object {
            "backgroundColor": "#E9E9EF",
            "bottom": 0,
            "left": 0,
            "opacity": 1,
            "position": "absolute",
            "right": 0,
            "shadowColor": "black",
            "shadowOffset": Object {
              "height": 0,
              "width": 0
            },
            "shadowOpacity": 0.4,
            "shadowRadius": 10,
            "top": 0,
            "transform": Array [
              Object {
                "translateX": 0
              },
              Object {
                "translateY": 0
              }
            ]
          }
        }>
        <View>
          <Text>
            You have stumbled into an unknown realm of the application. This is certainly a bug, and something that you should never have seen.
          </Text>
        </View>
      </View>
    </View>
  </View>
</View>
`;

exports[`NavigationStack should display the current route 1`] = `
<View
  onLayout={[Function bound _onLayout]}
  style={
    Array [
      Object {
        "flex": 1
      },
      undefined
    ]
  }>
  <View
    style={
      Object {
        "flex": 1,
        "flexDirection": "column-reverse"
      }
    }>
    <View
      style={
        Object {
          "flex": 1
        }
      }>
      <View
        onMoveShouldSetResponder={[Function onMoveShouldSetResponder]}
        onMoveShouldSetResponderCapture={[Function onMoveShouldSetResponderCapture]}
        onResponderEnd={[Function onResponderEnd]}
        onResponderGrant={[Function onResponderGrant]}
        onResponderMove={[Function onResponderMove]}
        onResponderReject={[Function onResponderReject]}
        onResponderRelease={[Function onResponderRelease]}
        onResponderStart={[Function onResponderStart]}
        onResponderTerminate={[Function onResponderTerminate]}
        onResponderTerminationRequest={[Function onResponderTerminationRequest]}
        onStartShouldSetResponder={[Function onStartShouldSetResponder]}
        onStartShouldSetResponderCapture={[Function onStartShouldSetResponderCapture]}
        pointerEvents="auto"
        style={
          Object {
            "backgroundColor": "#E9E9EF",
            "bottom": 0,
            "left": 0,
            "opacity": 1,
            "position": "absolute",
            "right": 0,
            "shadowColor": "black",
            "shadowOffset": Object {
              "height": 0,
              "width": 0
            },
            "shadowOpacity": 0.4,
            "shadowRadius": 10,
            "top": 0,
            "transform": Array [
              Object {
                "translateX": 0
              },
              Object {
                "translateY": 0
              }
            ]
          }
        }>
        <Text
          style={
            Array [
              Object {
                "color": "#003035",
                "fontFamily": "Brandon Text",
                "fontSize": 13,
                "textAlign": "center"
              },
              undefined
            ]
          }>
          A 
          Foo
        </Text>
      </View>
    </View>
  </View>
</View>
`;
